# polis-backend-hania

./: .coveragerc  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  Makefile  README.md  TODO.md  appspec-euro.yml  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml  example.env  private.key  test.env
delphi/: .dockerignore  .gitignore  .pip-version  .pre-commit-config.yaml  803_check_batch_status_fix.patch  CLAUDE.md  Dockerfile  HOW_TO_TEST_NEW_POLLER.md  MIGRATION_GUIDE.md  Makefile  README.md  check_all_recent_batches.py  check_api_response.py  check_batch_details.py  check_batch_results.py  check_latest_batch.py  check_layer03.py  check_specific_batch.py  config.yaml  configure_instance.py  conftest.py  create_dynamodb_tables.py  create_topic_agenda_table.py  delphi  delphi_job_system_refactor.md  delphi_orchestrator.py  demo_script.py  direct_repness_test.py  docker-compose.test.yml  docker-compose.update.yml  docker-compose.yml  examine_topics.py  example.env  find_batch_jobs.py  full_pipeline_test.py  mise.toml  polis-delphi-dev.sh  pyproject.toml  requirements.txt  run_delphi.py  (+9 more)
delphi/.github/workflows/: ci.yml
delphi/docs/: BETTER_PYTHON_PRACTICES.md  BETTER_PYTHON_TODO.md  DATABASE_NAMING_PROPOSAL.md  DELPHI_AUTOSCALING_SETUP.md  DELPHI_DOCKER.md  DELPHI_JOB_SYSTEM_TROUBLESHOOTING.md  DISTRIBUTED_SYSTEM_ROADMAP.md  DOCKER.md  DOCKER_BUILD_OPTIMIZATION.md  DOCKER_OPTIMIZATION_SUMMARY.md  GLOBAL_SECTION_TEMPLATE_MAPPING_FIX.md  JOB_ID_MIGRATION_PLAN.md  JOB_ID_PRIMARY_KEY_DESIGN.md  JOB_ID_PRIMARY_KEY_IMPLEMENTATION.md  JOB_STATE_MACHINE_DESIGN.md  JOB_SYSTEM_DESIGN.md  OLLAMA_MODEL_CONFIG.md  QUICK_START.md  RESET_SINGLE_CONVERSATION.md  RUNNING_THE_SYSTEM.md  S3_STORAGE.md  SMART_COMMENT_FILTERING_PLAN.md  SPATIAL_TOPIC_PRIORITIZATION_SYSTEM.md  TESTING_LOG.md  TEST_RESULTS_SUMMARY.md  TOOL_CONFLICTS_RESOLVED.md  TOPIC_AGENDA_IMPLEMENTATION_SUMMARY.md  TOPIC_AGENDA_STORAGE_DESIGN.md  TOPIC_NAMING.md  VERSIONED_TOPIC_KEYS_IMPLEMENTATION.md  ZID_EXPOSURE_AUDIT.md  invite-code-mvp-implementation.md  invite-code-system-design.md  topic-moderation-system.md
delphi/job_system/: __init__.py  config.py
delphi/job_system/db/: __init__.py  dynamodb.py  models.py
delphi/job_system/handlers/: __init__.py  base.py  batch_status.py  narrative.py  pipeline.py
delphi/job_system/poller/: __init__.py  worker.py
delphi/job_system/utils/: __init__.py  logging.py  process.py  security.py
delphi/notebooks/: 00_introduction.ipynb  01_named_matrix.ipynb  02_pca.ipynb  README.md  biodiversity_analysis.ipynb  launch_notebook.sh  run_analysis.py  vw_analysis.ipynb
delphi/polismath/: __init__.py  __main__.py  poller.py  run_math_pipeline.py  system.py
delphi/polismath/benchmarks/: __init__.py  bench_repness.py  bench_update_votes.py  benchmark_utils.py
delphi/polismath/components/: __init__.py  config.py  server.py
delphi/polismath/conversation/: __init__.py  conversation.py  manager.py  priority.py
delphi/polismath/database/: __init__.py  dynamodb.py  postgres.py
delphi/polismath/math/: named_matrix.py
delphi/polismath/pca_kmeans_rep/: __init__.py  clusters.py  corr.py  named_matrix.py  pca.py  repness.py  stats.py
delphi/polismath/regression/: comparer.py  utils.py
delphi/polismath/utils/: __init__.py  general.py
delphi/scripts/: delphi_cli.py  job_poller.py  job_poller.py.bak  job_poller_new.py  regression_comparer.py  reset_conversation.py  reset_database.sh  reset_processing_jobs.py  setup_ollama.sh  stop_batch_check_cycle.py
delphi/tests/: TESTING_RESULTS.md  common_utils.py  compare_with_clojure.py  conversation_profiler.py  dataset_config.py  direct_conversation_test.py  direct_pca_test.py  direct_repness_test.py  download_real_data.py  full_pipeline_test.py  profile_postgres_data.py  run_math_pipeline_test.py  run_system_test.py  run_tests.py  simplified_repness_test.py  simplified_test.py  test_500_generate_embedding.py  test_501_calculate_comment_extremity.py  test_batch_id.py  test_clojure_output.py  test_clusters.py  test_conversation.py  test_corr.py  test_edge_cases.py  test_golden_data.py  test_minio_access.py  test_named_matrix.py  test_old_format_repness.py  test_pakistan_conversation.py  test_pca.py  test_pca_real_data.py  test_pca_robustness.py  test_postgres_real_data.py  test_real_data.py  test_real_data_comparison.py  test_real_data_simple.py  test_regression.py  test_repness.py  test_repness_comparison.py  test_repness_unit.py  (+3 more)
delphi/umap_narrative/: 500_generate_embedding_umap_cluster.py  501_calculate_comment_extremity.py  502_calculate_priorities.py  600_generate_llm_topic_names.py  700_datamapplot_for_layer.py  701_static_datamapplot_for_layer.py  702_consensus_divisive_datamapplot.py  703_participant_datamapplot.py  704_participant_group_analysis.py  800_report_topic_clusters.py  801_narrative_report_batch.py  802_process_batch_results.py  803_check_batch_status.py  803_check_batch_status.py.bak  811_participant_narrative_batch.py  812_check_participant_batch_status.py  813_process_participant_batch_results.py  QUICKSTART.md  README.md  create_dynamodb_tables.py  reset_conversation.py  run_pipeline.py
delphi/umap_narrative/llm_factory_constructor/: README.md  __init__.py  model_provider.py
delphi/umap_narrative/participant_prompts/: participant_groups.xml
delphi/umap_narrative/participant_prompts/subtaskPrompts/: system.xml
delphi/umap_narrative/polismath_commentgraph/: README.md  WORKPLAN.md  __init__.py  cli.py  lambda_handler.py  pyproject.toml  requirements.txt  setup_dev.sh
delphi/umap_narrative/polismath_commentgraph/core/: __init__.py  clustering.py  embedding.py
delphi/umap_narrative/polismath_commentgraph/schemas/: __init__.py  dynamo_models.py
delphi/umap_narrative/polismath_commentgraph/tests/: __init__.py  (+4 more)
delphi/umap_narrative/tests/: GROUP_DATA_JOURNAL.md  __init__.py  generate_fixed_xml.py  run_fixed_xml.sh  run_xml_test.py  test_group_data.py  test_group_data_standalone.py  test_xml_converter.py  verify_group_votes.py
delphi/umap_narrative/utils/: __init__.py  xml_converter.py
(+984 files in other folders)
